[tool.poetry]
name = "sankey-interactive"
version = "0.1.0"
description = "A Python library for generating complex, interactive Sankey diagrams."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/sankey-interactive"
repository = "https://github.com/yourusername/sankey-interactive"
keywords = ["sankey", "visualization", "interactive", "data", "charts"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4"
numpy = "^1.21"
pandas = "^1.3"
plotly = "^5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"
flake8 = "^3.9"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"